# dev.echo

./: .gitignore  KIRO.md  LICENSE  NOTICE  Package.resolved  Package.swift  README.md
.kiro/specs/dev-echo-phase1/: design.md  requirements.md  tasks.md
.kiro/specs/dev-echo-phase2/: design.md  requirements.md  tasks.md
.kiro/steering/: dev-echo-steering.md
Sources/DevEcho/: main.swift
Sources/DevEcho/Audio/: AudioCaptureEngine.swift  MicrophoneCapture.swift  SampleRateConverter.swift  SystemAudioCapture.swift
Sources/DevEcho/Command/: Command.swift  CommandParser.swift
Sources/DevEcho/IPC/: IPCClient.swift  IPCProtocol.swift
Sources/DevEcho/Services/: InputHandler.swift  KBService.swift  LLMService.swift  TerminalRenderer.swift
Sources/DevEcho/TUI/: ApplicationMode.swift  HeaderView.swift  ProcessingIndicator.swift  StatusBar.swift  StatusBarManager.swift  (+3 more)
Tests/DevEchoTests/: CommandParserTests.swift  TUIComponentTests.swift  TUIEngineTests.swift
backend/: .env.dev.example  README.md  __init__.py  main.py  pyproject.toml
backend/aws/: __init__.py  agents.py  config.py  handlers.py  kb_service.py  s3_manager.py
backend/ipc/: __init__.py  protocol.py  server.py
backend/kb/: __init__.py  exceptions.py  manager.py
backend/llm/: __init__.py  agent.py  exceptions.py  service.py
backend/tests/: __init__.py  test_agents.py  test_handlers.py  test_ipc_integration.py  test_kb.py  test_kb_service.py  test_llm.py  test_protocol.py  test_s3_manager.py  test_transcription.py
backend/transcription/: __init__.py  engine.py  service.py
scripts/: dev-echo
